--- a/src/components/CardSubtitle.astro
+++ b/src/components/CardSubtitle.astro
@@ -20,9 +20,20 @@ const t = useTranslations(lang);
     
 
     <h2 class="z-20 text-gray-800/80 dark:text-white/80 duration-1000 font-semibold [&>p>strong]:text-sky-700 [&>p>strong]:dark:text-sky-400 [&>p>strong]:font-bold mx-3 md:mx-6 text-[9px] sm:text-sm md:text-base lg:text-lg xl:text-xl text-pretty max-w-[700px]"> 
-        <p> {t('subtitle.p1.text1')} <strong> {t('subtitle.p1.strongtext1')} </strong> {t('subtitle.p1.text2')} <strong> {t('subtitle.p1.strongtext2')} </strong> </p>
+        <p> 
+            <strong> {t('subtitle.p0.strongtext1')} </strong> 
+            {t('subtitle.p0.text')} 
+            <strong> {t('subtitle.p0.strongtext2')} </strong>   
+        </p>
         <br>
-        <p> {t('subtitle.p2.text1')} <strong> {t('subtitle.p2.strongtext1')} </strong> </p>
+        <p> 
+            {t('subtitle.p1.text1')} 
+            <strong> {t('subtitle.p1.strongtext1')} </strong> 
+            {t('subtitle.p1.text2')} 
+            <strong> {t('subtitle.p1.strongtext2')} </strong> 
+            {t('subtitle.p2.text1')} 
+            <strong> {t('subtitle.p2.strongtext1')} </strong> 
+        </p>
     </h2>
 </div>
 
