--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -145,6 +145,7 @@ const PROJECTS = [
     {
         title: t('project.title.1'),        
         description: t('project.description.1'),
+        document: '/TFG.pdf',
         image: '/project_images/SOFA.webp',
         alt_img: 'Omar\'s portfolio TFG',
         position_text: 'lg:col-start-2',
@@ -257,7 +258,8 @@ const PROJECTS = [
             </div>
 
             <div class={`flex flex-row items-center justify-evenly col-start-1 ${project.position_image} row-start-4 lg:row-start-3`}>
-                    {project.progress &&
+                    {/* Under development span message */}
+                    {/* {project.progress &&
                         <div class="w-auto h-12">  
                             <span class="relative inline-flex h-full w-full overflow-hidden rounded-full p-0.5" >
                                 <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] duration-1000 bg-[conic-gradient(from_90deg_at_50%_50%,#55bff2_0%,#006ba8_50%,#55bff2_100%)] dark:bg-[conic-gradient(from_90deg_at_50%_50%,#51a9e4_0%,#214255_50%,#51a9e4_100%)]" />
@@ -266,6 +268,12 @@ const PROJECTS = [
                                 </div>
                             </span>           
                         </div>
+                    } */}
+                    {project.document &&
+                        <Contact href={project.document} >    
+                            <ReadmeIcon class="size-5" />
+                            {t('project.readme')}   
+                        </Contact>
                     }
                     {project.git && 
                         <Contact href={project.git} >    
