--- a/src/components/CardSubtitle.astro
+++ b/src/components/CardSubtitle.astro
@@ -19,7 +19,7 @@ const t = useTranslations(lang);
     <div id="spotSub6" class="absolute z-10 duration-1000 size-12 rounded-full bg-sky-400 dark:bg-sky-700 opacity-50 blur-md mb-48  md:ml-36 md:mb-[300px] lg:mb-80 lg:-ml-32 xl:ml-32" />
     
 
-    <h2 class="z-20 text-gray-800/80 dark:text-white/80 duration-1000 font-semibold [&>p>strong]:text-sky-700 [&>p>strong]:dark:text-sky-400 [&>p>strong]:font-bold mx-3 md:mx-6 text-[9px] sm:text-sm md:text-md xl:text-lg text-pretty max-w-[700px]"> 
+    <h2 class="z-20 text-gray-800/80 dark:text-white/80 duration-1000 font-semibold [&>p>strong]:text-sky-700 [&>p>strong]:dark:text-sky-400 [&>p>strong]:font-bold mx-3 md:mx-6 text-[9px] sm:text-sm md:text-sm xl:text-lg text-pretty max-w-[700px]"> 
         <p> 
             {t('subtitle.p1.text1')} 
             <strong> {t('subtitle.p1.strongtext1')} </strong> 
